Litecoin FBX and Animations import

--- a/LTC Miner Android/LTC Miner Android.csproj
+++ b/LTC Miner Android/LTC Miner Android.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Assets\ProgressBar\Script\Utils.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Shoot.cs" />
+    <Compile Include="Assets\Scripts\showCoin.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\GoogleVR\Demos\Environment\DemoEnvUnlitGrayscale.shader" />
